회원가입 및 로그인 기능 수정

--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -28,7 +28,7 @@
                     <div th:if="${param.error}" class="alertMessage">
                         <p th:text="${param.exception}"></p>
                     </div>
-                    <a href="#" class="btn btn-block find-password">Forget Password?</a>
+                    <a href="/member/find-password" class="btn btn-block find-password">Forget Password?</a>
                     <br>
                     <div class="form-group">
                         <button class="btn btn-block g-button" type="submit" name="submit">submit</button>
