--- a/src/main/resources/templates/admin/category/recipe-list.html
+++ b/src/main/resources/templates/admin/category/recipe-list.html
@@ -3,8 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>레시피 게시판 카테고리 관리</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link th:href="@{/css/recipe-category-list.css}" rel="stylesheet">
+    <script>
+        $(document).ready(function() {
+            $('form[name=deleteForm]').on('submit', function() {
+                if (!confirm(' 카테고리를 삭제하시겠습니까? ')) {
+                    return false;
+                }
+            });
+
+            $('button.update-button').on('click', function() {
+
+                if (!confirm('카테고리를 수정하시겠습니까?')) {
+                    return false;
+                }
+
+                var $this = $(this);
+                var $tr = $this.closest('tr');
+
+                var id = $tr.find('input[name=id]').val();
+                var categoryName = $tr.find('input[name=categoryName]').val();
+                var usingYn = $tr.find('input[type=checkbox]')[0].checked;
+
+                $updateForm = $('form[name=updateForm]');
+                $updateForm.find('input[name=id]').val( id );
+                $updateForm.find('input[name=categoryName]').val( categoryName );
+                $updateForm.find('input[name=usingYn]').val( usingYn );
+                $updateForm.submit();
+            });
+        });
+    </script>
 </head>
 <body>
 <header>
