레시피 등록(CKeditor 사용) / 상세 보기 / 목록 보기 구현

--- a/src/main/resources/templates/board/add.html
+++ b/src/main/resources/templates/board/add.html
@@ -72,8 +72,8 @@
                     <tr>
                         <th>간략한 소개</th>
                         <td class="table-input">
-                            <div><textarea name="summary" class="form-control"
-                                           required></textarea></div>
+                            <div><input type="text" name="summary" class="form-control"
+                                           required/></div>
                         </td>
                     </tr>
                     <tr>
