레시피 카테고리, 게시판 관련 예외 처리 사용 중인 카테고리만 레시피 등록시 사용자에게 보이도록

--- a/src/main/resources/templates/admin/category/recipe-list.html
+++ b/src/main/resources/templates/admin/category/recipe-list.html
@@ -44,7 +44,7 @@
 <div class="col-md-10 col-md-offset-1">
     <form method="post" action="/admin/category/add">
         <input type="text" class="form-control pull-left category" name="categoryName" required
-               placeholder="카테고리 이름 입력" style="width:150px"/>
+               placeholder="중복 불가" style="width:150px"/>
         <button class="btn btn-success btn-sm pull-left" type="submit">+ Add new categories</button>
     </form>
 </div>
