--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,7 +21,8 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a th:href="@{/}" class="">Home</a></li>
+                    <li><a th:href="@{/}">Home</a></li>
+                    <li><a th:href="@{/board/list}" class="">레시피</a></li>
                 </ul>
                 <ul class="nav navbar-nav pull-right">
                     <li class=" dropdown">
