날짜 형식 출력 방식 변경(DateTimeFormatter 아닌 타임리프 사용)

--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -44,7 +44,7 @@
                     <tr>
                         <th>등록일</th>
                         <td class="table-input">
-                            <div th:text="${boardDto.createAtText}"></div>
+                            <div th:text="${#temporals.format(boardDto.createAt, 'yyyy-MM-dd HH:mm')}"></div>
                         </td>
                     </tr>
                     <tr>
