--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>레시피 상세 페이지</title>
@@ -18,9 +19,11 @@
 </header>
 <div class="col-md-10 col-md-offset-1">
         <div class="inline-div">
-            <button type="submit" class="btn btn-success btn-sm">
+            <a sec:authorize="isAuthenticated()" th:href="@{/board/update(id = ${boardDto.id})}"
+               th:if="${boardDto.writer != null and #authentication.name == boardDto.writer.userId}"
+               class="btn btn-success btn-sm">
                 <span class="glyphicon glyphicon-edit"></span> 레시피 수정
-            </button>
+            </a>
             <a href="/board/list" class="btn btn-warning btn-sm">
                 <span class="glyphicon glyphicon-th-list"></span> 레시피 목록</a>
         </div>
@@ -45,6 +48,18 @@
                         <th>등록일</th>
                         <td class="table-input">
                             <div th:text="${#temporals.format(boardDto.createAt, 'yyyy-MM-dd HH:mm')}"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>작성자</th>
+                        <td class="table-input">
+                            <div th:text="${boardDto.writer.userId}"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>조회수</th>
+                        <td class="table-input">
+                            <div th:text="${boardDto.views}"></div>
                         </td>
                     </tr>
                     <tr>
