--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -26,7 +26,7 @@
 </header>
 <body>
 <div class="col-md-10 col-md-offset-1">
-    <div class="inline-div"><a sec:authorize="isAuthenticated()" href="/board/add" class="btn btn-primary btn-sm">레시피 작성</a></div>
+    <div class="inline-div"><a sec:authorize="isAuthenticated()" href="/board/add" class="btn btn-info btn-sm">레시피 등록</a></div>
     <div class="panel panel-default panel-table">
         <div class="panel-heading">
             <div class="row">
@@ -74,11 +74,15 @@
         </table>
     </div>
     <div class="page">
+        <a th:classappend="${!list.hasPrevious} ? 'disabled'" class="page-link" th:href="@{/board/list(page = 0)}">
+            <span aria-hidden="true">[처음]</span></a>
         <th:block th:each="page:${#numbers.sequence(startPage,endPage)}">
             <a th:if="${page!=nowPage}" th:href="@{/board/list(page = ${page - 1})}" th:text="${page}"
                class="text-center" style="color: black"></a>
             <strong th:if="${page==nowPage}" th:text="${page}" style="color:indianred"></strong>
         </th:block>
+        <a th:classappend="${!list.hasNext} ? 'disabled'" class="page-link" th:href="@{/board/list(page = ${list.totalPages}-1)}">
+            <span>[끝]</span></a>
     </div>
 </div>
 </body>
