--- a/src/main/resources/templates/admin/category/recipe-list.html
+++ b/src/main/resources/templates/admin/category/recipe-list.html
@@ -26,12 +26,12 @@
 
                 var id = $tr.find('input[name=id]').val();
                 var categoryName = $tr.find('input[name=categoryName]').val();
-                var usingYn = $tr.find('input[type=checkbox]')[0].checked;
+                var usingCategory = $tr.find('input[type=checkbox]')[0].checked;
 
                 $updateForm = $('form[name=updateForm]');
                 $updateForm.find('input[name=id]').val( id );
                 $updateForm.find('input[name=categoryName]').val( categoryName );
-                $updateForm.find('input[name=usingYn]').val( usingYn );
+                $updateForm.find('input[name=usingCategory]').val( usingCategory );
                 $updateForm.submit();
             });
         });
@@ -44,7 +44,7 @@
 <div class="col-md-10 col-md-offset-1">
     <form method="post" action="/admin/category/add">
         <input type="text" class="form-control pull-left category" name="categoryName" required
-               placeholder="중복 불가" style="width:150px"/>
+               placeholder="카테고리 입력" style="width:150px"/>
         <button class="btn btn-success btn-sm pull-left" type="submit">+ Add new categories</button>
     </form>
 </div>
@@ -77,8 +77,8 @@
                     <input th:value="${x.categoryName}" type="text" name="categoryName" class="form-control-sm" style="width:120px"/>
                 </td>
                 <td>
-                    <input th:checked="${x.usingYn}" type="checkbox" th:id="'usingYn_' + ${x.id}" th:name="'usingYn_' + ${x.id}" value="true"/>
-                    <label th:for="'usingYn_' + ${x.id}">사용</label>
+                    <input th:checked="${x.usingCategory}" type="checkbox" th:id="'usingCategory_' + ${x.id}" th:name="'usingCategory_' + ${x.id}" value="true"/>
+                    <label th:for="'usingCategory_' + ${x.id}">사용</label>
                 </td>
                 <td>
                     <div th:text="${x.getCreateAtText}">생성일</div>
@@ -109,7 +109,7 @@
 <form name="updateForm" method="post" action="/admin/category/update">
     <input type="hidden" name="id"/>
     <input type="hidden" name="categoryName"/>
-    <input type="hidden" name="usingYn" />
+    <input type="hidden" name="usingCategory" />
 </form>
 </body>
 </html>
