레시피 수정 페이지 제작 및 기타 html 수정

--- a/src/main/resources/templates/board/update.html
+++ b/src/main/resources/templates/board/update.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>레시피 등록</title>
+    <title>레시피 수정</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -25,13 +25,12 @@
     <div th:replace="fragments/header :: header"></div>
 </header>
 <div class="col-md-10 col-md-offset-1">
-    <form id="submitForm" method="post" action="/board/add" enctype="multipart/form-data">
+    <form id="updateForm" method="post" action="/board/update" enctype="multipart/form-data">
+        <input th:value="${boardDto.id}" type="hidden" name="id"/>
         <div class="inline-div">
-            <button type="submit" class="btn btn-success btn-sm">
-                <span class="glyphicon glyphicon-saved"> </span> 레시피 등록
+            <button type="submit" class="btn btn-success btn-sm" >
+                <span class="glyphicon glyphicon-ok"> </span> 레시피 수정
             </button>
-            <a href="/board/list" class="btn btn-warning btn-sm">
-                <span class="glyphicon glyphicon-th-list"> </span> 목록 이동</a>
         </div>
         <div class="panel panel-default panel-table">
             <div class="panel-heading">
@@ -47,7 +46,7 @@
                     <tr>
                         <th>작성자</th>
                         <td>
-                            <div th:value="${userId}" th:text="${userId}"></div>
+                            <div th:text="${boardDto.writer.userId}"></div>
                         </td>
                     </tr>
                     <tr>
@@ -56,7 +55,8 @@
                             <div>
                                 <select name="categoryId" class="form-control" required>
                                     <option>카테고리 선택</option>
-                                    <option th:each="x : ${category}" th:value="${x.id}" th:text="${x.categoryName}">
+                                    <option th:selected="${boardDto.category.id == x.id}"
+                                            th:each="x : ${category}" th:value="${x.id}" th:text="${x.categoryName}">
                                     </option>
                                 </select>
                             </div>
@@ -65,21 +65,21 @@
                     <tr>
                         <th>제목</th>
                         <td class="table-input">
-                            <div><input type="text" name="title" class="form-control"
+                            <div><input th:value="${boardDto.title}" type="text" name="title" class="form-control"
                                         required/></div>
                         </td>
                     </tr>
                     <tr>
                         <th>간략한 소개</th>
                         <td class="table-input">
-                            <div><input type="text" name="summary" class="form-control" required/></div>
+                            <div><input th:value="${boardDto.summary}" type="text" name="summary" class="form-control" required/></div>
                         </td>
                     </tr>
                     <tr>
                         <th>필요한 재료</th>
                         <td class="table-input">
                             <div>
-                                <textarea id="ingredient" name="ingredient" class="form-control" style="height: 150px" required></textarea>
+                                <textarea th:text="${boardDto.ingredient}" id="ingredient" name="ingredient" class="form-control" style="height: 150px" required></textarea>
                             </div>
                         </td>
                     </tr>
@@ -88,7 +88,7 @@
                         <td class="table-input">
                             <input type="hidden" name="_csrf" id="_csrf" th:value="${_csrf?.token}">
                             <div>
-                                <textarea id="contents" name="contents" class="form-control"></textarea>
+                                <textarea th:text="${boardDto.contents}" id="contents" name="contents" class="form-control"></textarea>
                             </div>
                         </td>
                     </tr>
