--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -12,7 +12,7 @@
     <script>
         $(document).ready(function() {
             $('form[name=deleteForm]').on('submit', function() {
-                if (!confirm(' 카테고리를 삭제하시겠습니까? ')) {
+                if (!confirm(' 레시피를 삭제하시겠습니까? ')) {
                     return false;
                 }
             });
@@ -24,7 +24,7 @@
             margin-bottom: 1rem;
         }
         .table {
-            margin-bottom: 0;
+            margin-bottom: 0rem;
         }
     </style>
 </head>
@@ -57,6 +57,12 @@
                         <th>제목</th>
                         <td class="table-input">
                             <div th:text="${boardDto.title}"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>카테고리</th>
+                        <td class="table-input">
+                            <div th:text="${boardDto.category.categoryName}"></div>
                         </td>
                     </tr>
                     <tr>
