--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -27,12 +27,12 @@
 <body>
 <div class="col-md-10 col-md-offset-1">
     <div class="inline-div"><a sec:authorize="isAuthenticated()" href="/board/add" class="btn btn-info btn-sm">
-        <span class="glyphicon glyphicon-plus"></span> 레시피 작성</a></div>
+        <span class="glyphicon glyphicon-plus-sign"> </span> 레시피 작성</a></div>
     <div class="panel panel-default panel-table">
         <div class="panel-heading">
             <div class="row">
                 <div class="col col-xs-6">
-                    <h3 class="panel-title" style="font-weight: bold">레시피 목록</h3>
+                    <h3 class="panel-title" style="font-weight: bold" >레시피 목록</h3>
                 </div>
             </div>
         </div>
