--- a/src/main/resources/templates/member/email-auth.html
+++ b/src/main/resources/templates/member/email-auth.html
@@ -12,7 +12,7 @@
 </div>
 <div th:if="${result eq false}">
   <script>
-    alert('회원님의 계정 활성화에 실패하였습니다!'); location.href ="/"
+    alert('회원님의 계정은 이미 활성화가 완료된 상태입니다!'); location.href ="/"
   </script>
 </div>
 </body>
