관리자 회원 관리 기능 구현 && 회원 정보 && 비밀번호 변경

--- a/src/main/resources/templates/board/comment/update.html
+++ b/src/main/resources/templates/board/comment/update.html
@@ -39,7 +39,7 @@
                       required></textarea>
             <input type="hidden" id="boardId" name="boardId" th:value="${comment.board.id}">
             <input type="hidden" id="commentId" name="commentId" th:value="${comment.id}">
-            <button type="submit" class="btn comment-submit" style="background-color: #A084CA; color: #FFFFFF; float: right">Reply
+            <button type="submit" class="btn comment-submit" style="background-color: #7A86B6; color: #FFFFFF; float: right">Reply
                 Comment
             </button>
         </div>
