--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -32,8 +32,8 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="/member/info">회원 정보</a></li>
-                            <li><a href="/member/password">비밀번호 변경</a></li>
+                            <li><a href="/member/profile/my-info">회원 정보</a></li>
+                            <li><a href="/member/profile/withdraw">회원 턀퇴</a></li>
                         </ul>
                     </li>
                     <li class="log-check"><a sec:authorize="isAnonymous()" th:href="@{/member/login}">로그인</a></li>
